# Logger

./: CHANGELOG.md  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerVersion.h  LoggerVersion.h.in
